# politix-sweden

./: AGENTS.md  README.md  compare_mps.py  cookies_AminoPlum3p.json  cookies_HenneIntemporel.json  cookies_upriverawoke7y.json  data.json  pyproject.toml  scraper.py  stats.json  test_scraper.py
.github/workflows/: fetch-data.yml
data/: departement.csv  departement.json  departement_stats.json  regeringen.csv  regeringen.json  regeringen_stats.json  riksdagen.csv  riksdagen.json  riksdagen_stats.json
data/denmark/: folketinget.csv  folketinget.json  folketinget_stats.json
data/sweden/: departement.json  myndigheter.csv  myndigheter.json  myndigheter_stats.json  regeringen.csv  regeringen.json  riksdagen.csv  riksdagen.json  riksdagen_stats.json
frontend/: package-lock.json  package.json
frontend/public/: stats.json
frontend/src/: parliament-svg.d.ts  types.ts  utils.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Dashboard.tsx  DashboardFilters.tsx  DashboardStats.tsx  ParliamentChart.tsx  PoliticianTable.tsx
frontend/src/hooks/: useTranslation.ts
frontend/src/locales/: da.json  en.json  sv.json
queries/: departement.sparql  riksdagen.sparql
queries/denmark/: folketinget.sparql
queries/sweden/: myndigheter.sparql  regeringen.sparql
